[gd_scene load_steps=18 format=3 uid="uid://bqdng2i7akj8t"]

[ext_resource type="PackedScene" uid="uid://cocycpvxt0dnp" path="res://Pong/Singleplayer/scenes_Pong_Singleplayer/Player.tscn" id="1_3v0ep"]
[ext_resource type="Script" path="res://Pong/Singleplayer/scripts_Pong_Singleplayer/Main.gd" id="1_tijf5"]
[ext_resource type="PackedScene" uid="uid://devxocs6mn3yf" path="res://Pong/Singleplayer/scenes_Pong_Singleplayer/Opponent.tscn" id="2_nci7m"]
[ext_resource type="PackedScene" uid="uid://b4dfc6tpgfqaq" path="res://Pong/Singleplayer/scenes_Pong_Singleplayer/Ball.tscn" id="4_seow1"]
[ext_resource type="FontFile" uid="uid://c64mrm4fssr2g" path="res://Pong/Assets/PoetsenOne-Regular.ttf" id="6_qjyfj"]
[ext_resource type="AudioStream" uid="uid://dnjq3uvwxmkcc" path="res://Pong/Assets/ping_pong_8bit_beeep.ogg" id="7_5fajm"]
[ext_resource type="PackedScene" uid="uid://c8bxis8xqcdtu" path="res://Pong/Singleplayer/scenes_Pong_Singleplayer/Question.tscn" id="8_tx8ju"]
[ext_resource type="PackedScene" uid="uid://b7vscjjerot53" path="res://Pong/Singleplayer/scenes_Pong_Singleplayer/QuestionPopup.tscn" id="9_ce0iw"]
[ext_resource type="AudioStream" uid="uid://bo5o248btyk7c" path="res://Pong/Assets/Error.mp3" id="10_u308a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nvnoy"]
size = Vector2(1280, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sm3fp"]
size = Vector2(1280, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ov13m"]
size = Vector2(149.272, 505.704)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lwbwc"]

[sub_resource type="FontVariation" id="FontVariation_uqega"]
base_font = ExtResource("6_qjyfj")

[sub_resource type="LabelSettings" id="LabelSettings_67dub"]
font = SubResource("FontVariation_uqega")
font_size = 40
font_color = Color(0.85098, 0.847059, 0.843137, 1)

[sub_resource type="LabelSettings" id="LabelSettings_y3qfd"]
font = ExtResource("6_qjyfj")
font_size = 40
font_color = Color(0.85098, 0.847059, 0.843137, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rpvon"]
font = ExtResource("6_qjyfj")
font_size = 40
font_color = Color(0.952941, 0.313726, 0.160784, 1)

[node name="Level" type="Node"]
process_mode = 3

[node name="Main" type="Node" parent="."]
process_mode = 1
script = ExtResource("1_tijf5")

[node name="ColorRect" type="ColorRect" parent="Main"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.129412, 0.14902, 1)

[node name="Player" parent="Main" instance=ExtResource("1_3v0ep")]

[node name="Cieling" type="StaticBody2D" parent="Main"]

[node name="cieling_collision" type="CollisionShape2D" parent="Main/Cieling"]
position = Vector2(639, -9)
shape = SubResource("RectangleShape2D_nvnoy")
metadata/_edit_group_ = true

[node name="Floor" type="StaticBody2D" parent="Main"]
position = Vector2(640, 727)
metadata/_edit_group_ = true

[node name="floor_collision" type="CollisionShape2D" parent="Main/Floor"]
shape = SubResource("RectangleShape2D_sm3fp")

[node name="Opponent" parent="Main" instance=ExtResource("2_nci7m")]
position = Vector2(1260, 319)

[node name="Ball" parent="Main" instance=ExtResource("4_seow1")]
position = Vector2(636, 357)

[node name="PlayerSide" type="Area2D" parent="Main"]
position = Vector2(-79, 357)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Main/PlayerSide"]
scale = Vector2(0.954967, 1.40201)
shape = SubResource("RectangleShape2D_ov13m")

[node name="OpponentSide" type="Area2D" parent="Main"]
position = Vector2(1355, 363)
scale = Vector2(7.175, 36.1758)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Main/OpponentSide"]
shape = SubResource("RectangleShape2D_lwbwc")

[node name="CountdownTimer" type="Timer" parent="Main"]
wait_time = 2.0
one_shot = true

[node name="PlayerScore" type="Label" parent="Main"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -25.5
offset_right = -70.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_67dub")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpponentScore" type="Label" parent="Main"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 70.0
offset_top = -25.5
offset_right = 110.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_y3qfd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountdownLabel" type="Label" parent="Main"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -192.5
offset_right = 20.0
offset_bottom = -144.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_rpvon")

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="Main"]
position = Vector2(620, 167.5)
stream = ExtResource("7_5fajm")

[node name="Question" parent="Main" instance=ExtResource("8_tx8ju")]
position = Vector2(100, -300)

[node name="QuestionPopup" parent="Main" instance=ExtResource("9_ce0iw")]
visible = false
offset_right = -1280.0
offset_bottom = -720.0

[node name="ErrorSound" type="AudioStreamPlayer2D" parent="Main"]
position = Vector2(620, 167.5)
stream = ExtResource("10_u308a")

[node name="ScoreTimer" type="Timer" parent="Main"]
wait_time = 0.4

[connection signal="body_entered" from="Main/PlayerSide" to="Main" method="_on_player_side_body_entered"]
[connection signal="body_entered" from="Main/OpponentSide" to="Main" method="_on_opponent_side_body_entered"]
[connection signal="timeout" from="Main/CountdownTimer" to="Main" method="_on_countdown_timer_timeout"]
[connection signal="body_entered" from="Main/Question" to="Main" method="_on_question_body_entered"]
[connection signal="timeout" from="Main/ScoreTimer" to="Main" method="_on_score_timer_timeout"]
